fix duplicate code in `assets/js/app.js`
- To carry out this refactoring, it was also necessary to refactor the files `lib/elixir_gist_web/live/gist_form_component.ex`, `lib/elixir_gist_web/live/gist_live.html.heex`, and `lib/elixir_gist_web/live/all_gists_live.ex`, particularly the references to IDs and data attributes, specifically to avoid duplication in the HTML.
- The necessary CSS has been added to allow horizontal scrolling in both snippet previews and in the detail view and in text areas for code entry. At the same time, some display/styling errors in the code entry areas have been corrected.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -49,14 +49,16 @@ form input[type="text"], input[type="email"], input[type="password"]:focus {
 }
 
 /* https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-padding-bottom */
+html,
 .scroller {
     scroll-padding-bottom: 32px;
-    scrollbar-gutter: stable;
+    overflow-x: auto;
     scrollbar-color: transparent transparent;
     scrollbar-width: thin;
     transition: scrollbar-color 2s ease-in-out;
 }
 
+html,
 .scroller:hover {
     scrollbar-color: #3C3B3B transparent;
 }
